--- a/wp-content/themes/alicelf-adaptive/style-parts/_header.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_header.scss
@@ -156,23 +156,24 @@ body.admin-bar {
 
 	/*Tablet*/
 	@media (max-width : 951px) {
-		background-color  : transparentize($gray-dark, .1);
-		position          : absolute;
-		top               : 0;
-		left              : 0;
-		width             : 100%;
-		height            : 100%;
-		min-height        : 1000px;
-		z-index           : 98;
+		background-color : transparentize($gray-dark, .1);
+		position         : absolute;
+		top              : 0;
+		left             : 0;
+		width            : 100%;
+		height           : 100%;
+		min-height       : 1000px;
+		z-index          : 98;
+		opacity          : 0;
 		ul.nav {
 			display    : block;
 			width      : 90%;
 			float      : none;
 			margin     : 50px auto 0;
 			max-width  : 500px;
-			background : url("img/mobile-nav.png");
-			overflow-y: auto ;
-			max-height: 58%;
+			background : url("img/mobile-nav-white.png");
+			overflow-y : auto;
+			max-height : 58%;
 		}
 		li {
 			display    : block;
@@ -184,20 +185,20 @@ body.admin-bar {
 			a {
 				padding-top    : 10px !important;
 				padding-bottom : 10px !important;
-				color          : #fff;
+				color          : #000;
 				&:focus {
 					background-color : transparent !important;
-					color            : #fff !important;
+					color            : #000 !important;
 				}
 				&:hover {
 					background-color : rgba(255, 255, 255, 0.35);
-					color            : #fff !important;
+					color            : #000 !important;
 				}
 			}
 			&.active {
 				> a {
-					background-color : rgba(255, 255, 255, 0.35) !important;
-					color            : #fff !important;
+					background-color : rgba(209, 209, 209, 0.49) !important;
+					color            : #000 !important;
 				}
 			}
 			&.menu-item-has-children {
@@ -263,7 +264,7 @@ body.admin-bar {
 			line-height             : 40px;
 			&:before {
 				content : "\f067";
-				color   : rgba(255, 255, 255, 0.36);
+				color   : rgba(129, 129, 129, 0.76);
 			}
 			&.right-caret {
 				-webkit-transform : rotate(0deg);
