--- a/wp-content/themes/alicelf-adaptive/style-parts/_flex-grid.scss
+++ b/wp-content/themes/alicelf-adaptive/style-parts/_flex-grid.scss
@@ -5,6 +5,9 @@
 
 // flex-col flex-col-desktop flex-col-tablet flex-col-phone
 @mixin flex-col {
+	.flex-col-33 {
+		flex-basis: 33.3333333333%;
+	}
 	$baseFlexWidth : 5;
 	@for $i from 5 through 24 {
 		.flex-col-#{$baseFlexWidth} {
@@ -16,6 +19,9 @@
 	/*Desktop*/
 	$baseFlexWidth : 5;
 	@media (min-width : 952px) {
+		.flex-col-desktop-33 {
+			flex-basis: 33.3333333333%;
+		}
 		@for $i from 5 through 24 {
 			.flex-col-desktop-#{$baseFlexWidth} {
 				flex-basis : percentage($baseFlexWidth)/100;
@@ -27,17 +33,24 @@
 	/*Tablet*/
 	$baseFlexWidth : 5;
 	@media (max-width : 951px) {
+		.flex-col-tablet-33 {
+			flex-basis: 33.3333333333%;
+		}
 		@for $i from 5 through 24 {
 			.flex-col-tablet-#{$baseFlexWidth} {
 				flex-basis : percentage($baseFlexWidth)/100;
 			}
 			$baseFlexWidth : $baseFlexWidth + 5;
 		}
+
 	}
 
 	/*Mobile*/
 	$baseFlexWidth : 5;
 	@media (max-width : 767px) {
+		.flex-col-phone-33 {
+			flex-basis: 33.3333333333%;
+		}
 		@for $i from 5 through 24 {
 			.flex-col-phone-#{$baseFlexWidth} {
 				flex-basis : percentage($baseFlexWidth)/100;
