--- a/wp-content/themes/blank-wptheme/style-parts/_vars.scss
+++ b/wp-content/themes/blank-wptheme/style-parts/_vars.scss
@@ -1,5 +1,4 @@
-//$baseFont : "Open Sans", sans-serif;
-$baseFont : $ProximaNova-Regular;
+$baseFont : "Open Sans", sans-serif;
 
 $text-color : #504d4d;
 
